--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ dist-ssr
 *.local
 src
 public
+index.html
+eslintrc.cjs
+package.json
+package-lock.json
+postcss.config.js
+README.md
+tailwind.config.js
+vite.config.js
 
 # Editor directories and files
 .vscode/*
